--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
   </head>
   <body>
+    <h2}>Anuvad - Translate</h2>
     <div class="container">
         <p>Translate</p>
       <div class="wrapper">
